# QtFriendlyWidgets

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  FriendlyWidgets.cpp  windeployqt.cmake
include/QtFriendlyWidgets/: qadvanceddial.hpp  qadvancedslider.hpp
include/QtFriendlyWidgets/private/: qadvancedslidercommon_p.hpp
src/: qadvanceddial.cpp  qadvancedslider.cpp  qadvancedslidercommon.cpp
